added bootstrap and updated forms, fixed routing

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -13,3 +13,23 @@
  *= require_tree .
  *= require_self
  */
+
+@import "bootstrap";
+
+
+ /* Styling for Flash messages */
+ div.success {
+    background-color: lightgreen;
+    border: 4px solid green;
+    padding: 2rem
+ }
+
+ div.failure {
+    background-color: lightcoral;
+    border: 4px solid red;
+    padding: 2rem
+ }
+
+//  body {
+//    margin: 20px;
+//  }
