--- a/app/views/to_dos/_form.html.erb
+++ b/app/views/to_dos/_form.html.erb
@@ -1,14 +1,18 @@
 <%= form_with model: todo do |form|%>
 
-    <div>
-        <%= form.label :description %>
-        <%= form.text_field :description %>
+    <div class="form-group">
+        <%= form.label :description, class: "form-label"%>
+        <%= form.text_field :description, class: "form-control" %>
     </div>
 
-     <div>
-        <%= form.label :is_complete %>
-        <%# <%= form.check_box :is_complete %> 
+     <div  class="form-group">
+        
+        <%= form.check_box :is_complete, class: "form-label"%>
+        <%= form.label :is_complete, class: "form-label"%>
+        
     </div>
-    <div><%= form.submit %></div>
+    <div  class="form-group">
+        <%= form.submit class: "btn btn-primary btn-sm" %>
+    </div>
 
 <% end %>
