--- a/app/views/to_dos/_form.html.erb
+++ b/app/views/to_dos/_form.html.erb
@@ -1,5 +1,5 @@
 <%= form_with model: todo do |form|%>
-
+<div class="container mb-3">
     <div class="form-group">
         <%= form.label :description, class: "form-label"%>
         <%= form.text_field :description, class: "form-control" %>
@@ -14,5 +14,5 @@
     <div  class="form-group">
         <%= form.submit class: "btn btn-primary btn-sm" %>
     </div>
-
+</div>
 <% end %>
