--- a/app/views/to_dos/index.html.erb
+++ b/app/views/to_dos/index.html.erb
@@ -21,5 +21,22 @@
     </tbody>
 </table>
 <br>
+
+<form action="/to_dos" method="post">
+    <label for="description">Description</label>
+    <input id="desription" type="text" name="to_do[description]">
+    <input type="submit" value="Add">
+</form>
+<!--
+<%= form_with model: @todo do |form|  %>
+    <div class="form-group">
+        <%= form.label :description, class: "form-label" %>
+        <%= form.text_field :description, class: "form-control" %>
+    </div>
+    <div class="form-group">
+        <%= form.submit "Add New To Do" %>
+    </div>
+<% end %>
+
 <%= link_to "Add new todo", new_to_do_path %>
-</div>
+</div>-->
