--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -22,9 +22,11 @@
         <li class="nav-item">
           <%= link_to "Home", to_dos_path, class: "nav-link"%>
         </li>
-
         <li class="nav-item">
-          <%= link_to "Logout", session_path(@current_user), class: "nav-link", data: { turbo_method: :delete } if @current_user%>
+          <%= link_to "My Lists", lists_path, class: "nav-link" %>
+        </li>
+        <li class="nav-item">
+          <%= link_to "Logout", session_path(@current_user), class: "nav-link", data: { turbo_method: :delete } if @current_user %>
         </li>
       </ul>
     </div>
@@ -39,5 +41,8 @@
 
 
     <%= yield %>
+
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js" integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.min.js" integrity="sha384-mQ93GR66B00ZXjt0YO5KlohRA5SY2XofN4zfuZxLkoj1gXtW8ANNCe9d5Y3eG5eD" crossorigin="anonymous"></script>
   </body>
 </html>
