added list feature to categorize todos

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -26,7 +26,7 @@
           <%= link_to "My Lists", lists_path, class: "nav-link" %>
         </li>
         <li class="nav-item">
-          <%= link_to "Logout", session_path(@current_user), class: "nav-link", data: { turbo_method: :delete } if @current_user %>
+          <%= link_to("Logout", session_path(@current_user), class: "nav-link", data: { turbo_method: :delete }) if @current_user %>
         </li>
       </ul>
     </div>
