--- a/app/views/lists/show.html.erb
+++ b/app/views/lists/show.html.erb
@@ -1,6 +1,8 @@
+<div class="container">
+
 <h1 class="heading"><%= @list.category %></h1>
 
-<div class="container">
+
 <table class="table">
     <thead>
         <tr>
@@ -14,17 +16,22 @@
             <tr>
                 <td><%= t.description %> </td>
                 <td><%= check_box_tag 'is_complete', 'is_complete', t.is_complete, {onclick: "console.log('mark as complete')"} %></td>
-                <td><%= link_to "Details", t %></td>
-                <td><%= link_to "Edit", edit_to_do_path(t) %></td>
-                <td><%= link_to "Delete", to_do_path(t), data: { turbo_method: :delete, confirm: "Are you sure?"} %></td>
+                <td><%= link_to "Details", list_to_do_path(@list, t) %></td>
+                <td><%= link_to "Edit", edit_list_to_do_path(@list, t) %></td>
+                <td><%= link_to "Delete", list_to_do_path(@list, t), data: { turbo_method: :delete, confirm: "Are you sure?"} %></td>
             </tr>
         <% end %>
     </tbody>
 </table>
 <br>
 
-<form action="/to_dos" method="post">
-    <label for="description">Description</label>
-    <input id="desription" type="text" name="to_do[description]">
-    <input type="submit" value="Add">
-</form>
+<!-- trying to send POST to /lists/:thisListId/todos : in order to add a new todo that's already associated with a list-->
+
+<%= form_with url: list_to_dos_path(@list) do |form| %>
+
+    <%= form.label :description %>
+    <%= form.text_field 'to_do[description]' %>
+    <%= form.submit "Add" %>
+
+
+<% end %>
