--- a/app/views/to_dos/index.html.erb
+++ b/app/views/to_dos/index.html.erb
@@ -5,6 +5,7 @@
         <tr>
             <th>ToDo</th>
             <th>Done?</th>
+            <th>Category</th>
             <th colspan=3>Actions</th>
         </tr>
     </thead>
@@ -13,6 +14,7 @@
             <tr>
                 <td><%= t.description %> </td>
                 <td><%= check_box_tag 'is_complete', 'is_complete', t.is_complete, {onclick: "console.log('mark as complete')"} %></td>
+                <td><%= link_to t.list.category, list_path(t.list) %></td>
                 <td><%= link_to "Details", t %></td>
                 <td><%= link_to "Edit", edit_to_do_path(t) %></td>
                 <td><%= link_to "Delete", to_do_path(t), data: { turbo_method: :delete, confirm: "Are you sure?"} %></td>
