fixed broken logout link in list index view

--- a/app/views/lists/index.html.erb
+++ b/app/views/lists/index.html.erb
@@ -13,7 +13,7 @@
                 <p class="card-text">
                     This list has <%= l.to_dos.size %> to dos in it
                 </p>
-                <%= button_to "See to dos", l, method: :get, class: "btn btn-warning" %>
+                <%= link_to "See to dos", l, method: :get, class: "btn btn-warning" %>
                
             </div>
         </div>
